# cookiecutter-hypermodern-python

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/docs/: index.md
{{cookiecutter.project_name}}/docs/Getting Started/: Adding_Tasks.md  Python Resouces.md  SettingUpPycharm.md  Tested_Documentation.md
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: document_me.py
{{cookiecutter.project_name}}/tests/: test_docs.py
